Fix popup panel overflow
The detailed resource usage panel overflows the desktop window if the
items are too long.

--- a/System_Monitor@bghome.gmail.com/stylesheet.css
+++ b/System_Monitor@bghome.gmail.com/stylesheet.css
@@ -14,7 +14,18 @@
 	text-align: right;
 }
 
+.item-label
+{
+    min-width: 8em;
+    max-width: 12em;
+}
+
 .bytes-text {
     min-width: 4em;
     text-align: right;
+}
+
+.meter-area-container {
+    max-width: 1800px;
+    max-height: 1000px;
 }
